# py-nodal-dg

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
examples/: dev_ins.py  dev_poisson.py  gmsh_test.py  kpp_wave.py  lebesgue_c.py  mesh.py  riemann_problem_12.py  sod_shock_tube.py  sparse_solver.py  test_convergence_1d.py  test_convergence_2d.py
mesh/gmsh/: README.md  square_trans.geo
pyndg/: backend.py  bc_1d.py  bc_2d.py  euler_1d.py  euler_2d.py  euler_param_1d.py  euler_param_2d.py  mesh_1d.py  mesh_2d.py  scalar_1d.py  scalar_2d.py  scalar_param_1d.py  scalar_param_2d.py  time_integrator.py  viscosity_model.py
src/pyndg/: __init__.py  backend.py  bc_1d.py  bc_2d.py  euler_2d.py  mesh_1d.py  mesh_2d.py  physic_model.py  utils.py  viscosity_model.py  visualize_results_1d.py
src/pyndg/aaaOLD/: euler_1d.py  euler_param_1d.py  limiters.py  (+3 more)
tests/: test_basis.py  test_ops.py
tests/data/: reference_ops_N1_1d.mat  reference_ops_N1_2d.mat  reference_ops_N1_3d.mat  reference_ops_N2_1d.mat  reference_ops_N2_2d.mat  reference_ops_N2_3d.mat  reference_ops_N3_1d.mat  reference_ops_N3_2d.mat  reference_ops_N3_3d.mat  reference_ops_N4_1d.mat  reference_ops_N4_2d.mat  reference_ops_N4_3d.mat  reference_ops_N5_1d.mat  reference_ops_N5_2d.mat  reference_ops_N5_3d.mat  reference_ops_N6_1d.mat  reference_ops_N6_2d.mat  reference_ops_N6_3d.mat  reference_ops_N7_1d.mat  reference_ops_N7_2d.mat  reference_ops_N7_3d.mat  reference_ops_N8_1d.mat  reference_ops_N8_2d.mat  reference_ops_N8_3d.mat  reference_ops_N9_1d.mat  reference_ops_N9_2d.mat  reference_ops_N9_3d.mat
(+11 files in other folders)
